--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: build
+      - name: Build
         uses: jetli/wasm-pack-action@v0.3.0
         with:
           version: 'latest'
+      - run: wasm-pack build --target web
+      - run: tar -czvf blog-wasm.tar.gz pkg/
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: pkg/*
+          files: blog-wasm.tar.gz
