--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: build
+      - name: Build
         uses: jetli/wasm-pack-action@v0.3.0
         with:
           version: 'latest'
+      - run: wasm-pack build --target web
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
